﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL$

2007-02-14 Marc Delisle  <lem9@users.sourceforge.net>
    * add a warning on main page if mcrypt can't be loaded (bug 1658160)

2007-02-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/database_interface.lib.php: bug #1616486 server_databases does
      not show all databases
    * libraries/sqlparser.data.php: MySQL function and column names, reserved
      and forbidden words updated,
      bug #1657045 Spatial functions not supported
      bug #1657037 Missing column type "geometry"

2007-02-11 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: some links should open a new page
    * Documentation.html, libraries/navigation_header.inc.php,
      libraries/config.default.php: $cfg['LeftLogoLinkWindow'] to decide
      in which window the logo-linked page will appear
    ### 2.10.0-rc1 released

2007-02-10 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish update, thanks to Daniel Hinostroza

2007-02-09 Marc Delisle  <lem9@users.sourceforge.net>
    * themes/darkblue_orange/img/logo_left.png,
      themes/original/img/logo_left.png: smaller PMA logo for navi

2007-02-08 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * themes/*/css/theme_right.css.php: bug #1653769 browsing highlight disabling
      doesn't work

2007-02-06 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * pmd_general.php, pmd_pdf.php, pmd_save_pos.php: fixed short open tags
      patch #1652886 thanks to Martin Thielecke - mthie
    * tbl_change.php: fixed escaping of field names in HTML and JavaScript
    * libraries/common.lib.php: PMA_backquote() did not quote 0
    * tbl_change.php: bug #1652810 - slashes are not escaped properly

2007-02-05 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/japanese: Update, thanks to Ishigaki Kenichi - tcool.

2007-02-05 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * lang/german: updated
