@@ -6,6 +6,7 @@ $Id$
 $HeadURL$
 
 2007-02-14 Marc Delisle  <lem9@users.sourceforge.net>
+    * libraries/common.lib.php: white page after uploading a 700 Kio BLOB
     * add a warning on main page if mcrypt can't be loaded (bug 1658160)
 
 2007-02-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
